fixed lombok issues